@@ -1,5 +1,11 @@
 2015-10-14  Mark Wielaard  <mjw@redhat.com>
 
+	* run-readelf-z.sh: New test.
+	* Makefile.am (TESTS): Add run-readelf-z.sh.
+	(EXTRA_DIST): Likewise.
+
+2015-06-24  Mark Wielaard  <mjw@redhat.com>
+
 	* msg_tst.c: Add ELF_E_NOT_COMPRESSED.
 	* run-elfgetchdr.sh: New test.
 	* testfile-zgnu32.bz2: New testfile.
